fixed overlapping buttons + post formatting

--- a/app/javascript/styling/Profile.scss
+++ b/app/javascript/styling/Profile.scss
@@ -38,7 +38,7 @@ body {
 #profile h2 {
     text-align: left; 
     font-family: s.$primary_font;
-    font-size: 27px;
+    font-size: 30px;
     letter-spacing: normal;
     font-style: bold;
     color: s.$textcolor;
